Using URI (#27)
* Creation of PathReference for dealing with Path and URLs

* Replacing PathRef with Path

* Replacing PathRef with Path

* Dealing with URL the 20 way
Splitting MediaFile into local and remote versions

* Trying catch and release

* Tidying up after String/path debackle

* Path to remoteurl file more correct

* URL Problems

* URL Handler workin better?